Uploaded image for project: 'ORC'
  1. ORC
  2. ORC-1455

[C++] Fix build failure on non-x86 with unused macro in CpuInfoUtil.cc

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 1.9.0
    • 2.0.0, 1.9.1
    • C++
    • None

    Description

      Consolidate compiler generated dependencies of target orc
      [ 36%] Building CXX object c++/src/CMakeFiles/orc.dir/CpuInfoUtil.cc.o
      [ 36%] Building CXX object c++/src/CMakeFiles/orc.dir/OrcFile.cc.o
      [ 36%] Building CXX object c++/src/CMakeFiles/orc.dir/Reader.cc.o
      [ 38%] Building CXX object c++/src/CMakeFiles/orc.dir/RleDecoderV2.cc.o
      [ 38%] Building CXX object c++/src/CMakeFiles/orc.dir/RLEV2Util.cc.o
      [ 38%] Building CXX object c++/src/CMakeFiles/orc.dir/RLEv1.cc.o
      [ 39%] Building CXX object c++/src/CMakeFiles/orc.dir/RLE.cc.o
      [ 40%] Building CXX object c++/src/CMakeFiles/orc.dir/RleEncoderV2.cc.o
      /Users/gangwu/Projects/orc/c++/src/CpuInfoUtil.cc:65:9: error: macro is not used [-Werror,-Wunused-macros]
      #define UNUSED (void) [[maybe_unused]]
              ^
      1 error generated.
      make[2]: *** [c++/src/CMakeFiles/orc.dir/CpuInfoUtil.cc.o] Error 1
      make[2]: *** Waiting for unfinished jobs....
      make[1]: *** [c++/src/CMakeFiles/orc.dir/all] Error 2
      make: *** [all] Error 2

      Attachments

        Activity

          People

            wgtmac Gang Wu
            wgtmac Gang Wu
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: