ORC-1455: [C++] Fix build with unused macro in CpuInfoUtil.cc